@@ -389,24 +389,6 @@ name|serde2
 operator|.
 name|objectinspector
 operator|.
-name|StructObjectInspector
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|serde2
-operator|.
-name|objectinspector
-operator|.
 name|ObjectInspectorUtils
 operator|.
 name|ObjectInspectorCopyOption
@@ -430,6 +412,24 @@ operator|.
 name|PrimitiveObjectInspector
 operator|.
 name|PrimitiveCategory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|objectinspector
+operator|.
+name|StructObjectInspector
 import|;
 end_import
 
@@ -4405,11 +4405,25 @@ name|ai
 operator|++
 control|)
 block|{
-comment|// Calculate the parameters
+comment|// o is set to NULL in order to distinguish no rows at all
 name|Object
 index|[]
 name|o
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|aggregationParameterFields
+index|[
+name|ai
+index|]
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|o
+operator|=
 operator|new
 name|Object
 index|[
@@ -4420,7 +4434,16 @@ index|]
 operator|.
 name|length
 index|]
-decl_stmt|;
+expr_stmt|;
+block|}
+else|else
+block|{
+name|o
+operator|=
+literal|null
+expr_stmt|;
+block|}
+comment|// Calculate the parameters
 for|for
 control|(
 name|int
