@@ -2170,6 +2170,26 @@ name|TableAliasInfo
 argument_list|>
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|inpOp
+operator|.
+name|getSchema
+argument_list|()
+operator|!=
+literal|null
+operator|&&
+name|inpOp
+operator|.
+name|getSchema
+argument_list|()
+operator|.
+name|getSignature
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
 for|for
 control|(
 name|ColumnInfo
@@ -2243,6 +2263,7 @@ name|getTabAlias
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
