@@ -27,6 +27,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|hive
@@ -215,6 +243,24 @@ name|GenericUDAFCount
 implements|implements
 name|GenericUDAFResolver2
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|GenericUDAFCount
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -500,6 +546,16 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
+comment|// parameters == null means the input table/split is empty
+if|if
+condition|(
+name|parameters
+operator|==
+literal|null
+condition|)
+block|{
+return|return;
+block|}
 if|if
 condition|(
 name|countAllColumns
